[gd_scene load_steps=13 format=2]

[ext_resource path="res://game/title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://game/ui/StartGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/title_screen/Startbildschirm_V1.png" type="Texture" id=3]
[ext_resource path="res://game/ui/images/dumpster_party.png" type="Texture" id=5]
[ext_resource path="res://game/ui/QuitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ui/CreditsButton.tscn" type="PackedScene" id=7]

[sub_resource type="Shader" id=13]
code = "// NOTE: Shader automatically converted from Godot Engine 3.4.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_mix;


void fragment() {
	vec2 offset = (UV - vec2(0.5)) * 2.0;
	float r = offset.x * offset.x + offset.y * offset.y;
	
	
	COLOR.a *= texture(TEXTURE, UV).r - r;
}
"

[sub_resource type="ShaderMaterial" id=15]
shader = SubResource( 13 )

[sub_resource type="OpenSimplexNoise" id=14]

[sub_resource type="NoiseTexture" id=16]
noise = SubResource( 14 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.00271416 ), 0.0, 3.54454, 0, 0, Vector2( 1, 1 ), 0.0682907, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.0233161, 0.313471, 0.388601, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0.364706, 1, 1, 1, 0.352941, 1, 1, 1, 0 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 0.73, 0.73, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -311, -17 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
material = SubResource( 15 )
position = Vector2( 1210.01, 528.911 )
amount = 16
lifetime = 30.0
randomness = 0.12
texture = SubResource( 16 )
direction = Vector2( -1, 0 )
spread = 0.0
gravity = Vector2( 0, -1 )
initial_velocity = 50.0
initial_velocity_random = 0.3
angle_random = 1.0
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 18 )

[node name="StartGameButton" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_top = 253.0
margin_right = 864.0
margin_bottom = 453.0

[node name="Credits" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 662.0
margin_top = 440.0
margin_right = 812.0
margin_bottom = 640.0
rect_min_size = Vector2( 150, 60 )

[node name="Quit" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 888.0
margin_top = 439.0
margin_right = 988.0
margin_bottom = 639.0
rect_min_size = Vector2( 100, 50 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -189.0
margin_right = 150.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -22.0
margin_right = 97.0
margin_bottom = 22.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 97.0
margin_bottom = 14.0
text = "Minigames"
align = 1

[node name="Earworm" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 97.0
margin_bottom = 38.0
text = "Play Earworm"

[node name="Disco Light" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 97.0
margin_bottom = 62.0
text = "Disco Light"

[node name="Cocktail Bar" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 97.0
margin_bottom = 86.0
text = "Cocktail Bar"

[node name="DumpsterParty" type="Sprite" parent="."]
position = Vector2( 636, 386 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
offset = Vector2( 32.5001, -507.5 )

[connection signal="mouse_entered" from="StartGameButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="mouse_entered" from="Credits" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Earworm" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Earworm" to="." method="_on_Earworm_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Disco Light" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Disco Light" to="." method="_on_Disco_Light_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Cocktail Bar" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Cocktail Bar" to="." method="_on_Cocktail_Bar_pressed"]
